--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
-        "phpstan/phpstan": "^2.1"
+        "phpstan/phpstan": "^2.1",
+        "friendsofphp/php-cs-fixer": "^3.92"
     },
     "autoload": {
         "psr-4": {
@@ -33,6 +34,7 @@
     "scripts": {
         "test": "phpunit tests --display-all-issues --colors=always",
         "phpstan": "phpstan analyse -c phpstan.neon",
-        "stan-test": "phpstan analyse -c phpstan.neon tests"
+        "stan-test": "phpstan analyse -c phpstan.neon tests",
+        "cs-fixer": "php-cs-fixer fix --config=.php-cs-fixer.dist.php"
     }
 }
