--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "test": "phpunit tests --display-all-issues --colors=always",
         "phpstan": "phpstan analyse -c phpstan.neon",
         "stan-test": "phpstan analyse -c phpstan.neon tests",
-        "cs-fixer": "php-cs-fixer fix --config=.php-cs-fixer.dist.php"
+        "cs-fixer": "php-cs-fixer fix --config=.php-cs-fixer.dist.php",
+        "cs-fixer-check": "php-cs-fixer check --config=.php-cs-fixer.dist.php -vv"
     }
 }
