--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "ORM simple.",
     "version": "1.0.0",
     "type": "library",
-    "license": "MIT",
+    "license": "Unlicense",
     "authors": [
         {
             "name": "Oriol Sastre Rienitz",
