Eliminar interface/classe abstracte model i classes que son taules es basen en l'atribut Taula

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         },
         "classmap": [
             "src/logic/Logic.php"
+        ],
+        "files": [
+            "src/Model.php"
         ]
     },
     "autoload-dev": {
